FIX: fixed text wrap bug

--- a/clientBlogs/src/components/css/BlogCard.css
+++ b/clientBlogs/src/components/css/BlogCard.css
@@ -54,6 +54,7 @@
     color: #F74D79;
     padding-top: 10px;
     text-align: start;
+    overflow-wrap: anywhere;
 }
 
 .card .cardContent .description {
