--- a/clientBlogs/src/pages/css/IndividualBlogs.css
+++ b/clientBlogs/src/pages/css/IndividualBlogs.css
@@ -7,17 +7,22 @@
 }
 
 .heroBanner {
+    position: absolute;
     width: 100%;
     display: flex;
     justify-content: center;
+    height: auto;
+    bottom: 5rem;
 }
 
 .heroBanner .container {
+    width: 80%;
+    margin: 0px auto;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 16px;
     position: relative;
-    top: -100px;
 }
 
 .heroBanner .container>.title {
@@ -54,7 +59,8 @@
 }
 
 .blogBanner {
-    width: 100%;
+    width: 80%;
+    margin: 0px auto;
     display: flex;
     justify-content: center;
 }
@@ -255,14 +261,14 @@
 
 @media only screen and (max-width:430px) {
     .heroBanner {
-        height: 0px;
+        height: auto;
     }
 
     .heroBanner .container {
         flex-direction: column;
+        align-items: baseline;
         width: 100%;
         padding: 10vw;
-        top: -200px;
     }
 
     .heroBanner .container .usernameContainer {
@@ -278,8 +284,13 @@
         font-size: 28px;
     }
 
+    .blogBanner {
+        height: auto;
+        width: 90%;
+    }
     .blogBanner .container {
         flex-direction: column;
+        align-items: baseline;
         width: 100%;
         padding: 10vw;
     }
